--- a/src/style/vars.scss
+++ b/src/style/vars.scss
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Acme|Shadows+Into+Light"');
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
 
-$color-error: #ff0000;
+$color-error: #ffa600;
 $color-secondary: #F0DCB6;
 $color-primary: #ff777a;
 $color-success: #77ff7a;
@@ -10,12 +10,15 @@ $color-lightgrey: #B5BAC3;
 $color-grey: #7A7D84;
 $color-darkgrey: #6E7177;
 $color-darkcyan: #008b8b;
+$color-ivory: #f4e8c1;
+$color-azulverde: #a0c1b8;
+$color-bolivia: #709fb0;
+$color-jacaranda: #726a95;
+$color-malbec: #351f39;
 
 $pad: 0.5em;
 
-$acme-font: 'Acme', sans-serif;
-$shadow-font: 'Shadows Into Light', cursive;
-$font-primary: 'Lato', sans-serif;
-$font-secondary: 'Roboto Mono', monospace;
+$font-primary: 'Quicksand', sans-serif;
+
 
 $bg-texture: url("https://www.transparenttextures.com/patterns/bedge-grunge.png");
